<resources>
    <string name="app_name">Винни-ПУХТО</string>
    <string name="app_in_name">Винни-ПУХТО</string>
    <string name="app_name_after"> </string>
    <string name="text_button"> </string>
    <string name="btnSignIn">Войти</string>
    <string name="btnRegistration">Зарегистрироваться</string>
    <string name="emailHint">Адрес электронной почты</string>
    <string name="passwordHint">Пароль</string>
    <string name="nameHint">Имя</string>
    <string name="phoneHint">Номер телефона</string>
    <string name="title_activity_maps">Карта</string>
    <string name="title_activity_menu">MainActivity</string>
    <string name="title_map">Карта</string>
    <string name="title_order">Заказы</string>
    <string name="title_profile">Профиль</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="create_order">Создать заказ</string>
    <string name="settings">Настройки</string>
    <string name="address">Адрес</string>
    <string name="supportedBy">При поддержке:</string>


    <string name="cancel">Отмена</string>
    <string name="status">Статус:</string>

    <!-- Strings used for statuses -->
    <string name="status_waiting"><font color='#47F512'>ожидает</font></string>
    <string name="status_canceled"><font color='#DE1414'>отменен</font></string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Preference Titles -->
    <string name="profile_settings_header">Профиль</string>
    <string name="screen_header">Экран</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Screen Preference -->
    <string name="font_title">Шрифт</string>
    <string name="theme_mode_title">Тема</string>

    <!-- Strings to create order -->
    <string name="address_label">Адрес</string>
    <string name="garbage_type_label">Тип мусора</string>
    <string name="comment_label">Комментарий к заказу</string>
    <string name="enter_address">Введите адрес</string>
    <string name="enter_garbage_type">Укажите тип мусора</string>
    <string name="enter_comment">Напишите комментарий</string>
    <string name="confirm_order">ПОДТВЕРДИТЬ</string>

    <!-- Profile performance -->
    <string name="password_change">Изменить пароль</string>
    <string name="userName">Имя пользователя</string>
    <string name="email">Эл. почта</string>
    <string name="phoneNumber">Номер телефона</string>
    <string name="email_change">Изменить почту</string>
    <string name="name_change">Изменить имя</string>
    <string name="last_name_change">Изменить фамилию</string>
    <string name="phone_number_change">Изменить номер телефона</string>

    <!-- Strings for screen settings -->

    <!-- Font -->
    <string name="font_big">Большой</string>
    <string name="font_average">Средний</string>
    <string name="font_small">Маленький</string>

    <!-- Theme mode -->
    <string name="dark_mode">Тёмная</string>
    <string name="light_mode">Светалая</string>
    <string name="android_theme_mode">По умолчанию</string>
    <string name="search">поиск</string>
    <string name="order">Заказать</string>
    <string name="paper">Бумага</string>
    <string name="glass">Стекло</string>
    <string name="plastic">Пластик</string>
    <string name="logout">Выйти</string>



</resources>