<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/profile_settings_header">


    </PreferenceCategory>
    <EditTextPreference
        android:key="change_password"
        app:singleLine="true"
        android:inputType="textPassword"
        app:title="@string/password_change" />
    <EditTextPreference
        app:key="name_change"
        app:singleLine="true"
            android:defaultValue=""
        app:title="@string/name_change" />
    <EditTextPreference
        app:key="last_name_change"
        app:singleLine="true"
        app:title="@string/last_name_change" />
    <EditTextPreference
        app:key="email_change"
        app:singleLine="true"
        app:title="@string/email_change" />
    <EditTextPreference
        android:defaultValue=""
        android:inputType="phone"
        app:key="phone_number_change"
        app:singleLine="true"
        app:title="@string/phone_number_change" />
    <PreferenceCategory app:title="@string/screen_header">

        <ListPreference
            app:entries="@array/font_size"
            app:entryValues="@array/font_size"
            app:key="font_size"
            app:title="@string/font_title"
            app:defaultValue="@string/font_average" />
        <ListPreference
            app:defaultValue="@string/android_theme_mode"
            app:entries="@array/theme_mode"
            app:entryValues="@array/theme_mode"
            app:key="theme_mode_title"
            app:title="@string/theme_mode_title"/>
    </PreferenceCategory>

</PreferenceScreen>