<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animationCache="true"
    android:clickable="true"
    tools:context=".CreateOrderActivity">

    <TextView
        android:id="@+id/addressLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/address_label"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"

        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/addressLabel" />

    <TextView
        android:id="@+id/garbageTypeLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/garbage_type_label"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/address" />

    <TextView
        android:id="@+id/commentLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/comment_label"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxGlass" />

    <EditText
        android:id="@+id/comment"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:hint="@string/enter_comment"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/commentLabel" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="horizontal">

        <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
        </Space>

        <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="cancel"
                android:text="@string/cancel"
                android:layout_weight="8"/>
        <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
        </Space>
    <Button
        android:id="@+id/btnConfirmOrder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="saveOrder"
        android:text="@string/confirm_order"
            android:layout_weight="8"/>
        <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
        </Space>
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBoxPaper"
        android:layout_width="131dp"
        android:layout_height="48dp"
        android:text="@string/paper"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/garbageTypeLabel" />

    <CheckBox
        android:id="@+id/checkBoxGlass"
        android:layout_width="131dp"
        android:layout_height="47dp"
        android:text="@string/glass"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxPlastic" />

    <CheckBox
        android:id="@+id/checkBoxPlastic"
        android:layout_width="131dp"
        android:layout_height="49dp"
        android:text="@string/plastic"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxPaper" />
</androidx.constraintlayout.widget.ConstraintLayout>