<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/txt_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_label"/>
    <TextView
        android:id="@+id/txt_garbage_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/garbage_type_label"/>
    <TextView
        android:id="@+id/txt_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment_label"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>