<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        android:background="@android:color/white"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="10dp">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@android:color/white"
            android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emailField"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"
                android:text=""
                android:textSize="20sp"
                app:met_floatingLabel="highlight"
                app:met_baseColor="#0056d3"
                app:met_primaryColor="#982360"
                app:met_singleLineEllipsis="true" />
        <com.rengwuxian.materialedittext.MaterialEditText
                android:textColorHint="@color/black"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passwordField"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:text=""
                android:textSize="20sp"
                app:met_floatingLabel="highlight"
                app:met_baseColor="#0056d3"
                app:met_primaryColor="#982360"
                app:met_singleLineEllipsis="true"
                />
        <com.rengwuxian.materialedittext.MaterialEditText
                android:textColorHint="@color/black"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nameField"
                android:hint="@string/nameHint"
                android:inputType="text"
                android:text=""
                android:textSize="20sp"
                app:met_floatingLabel="highlight"
                app:met_baseColor="#0056d3"
                app:met_primaryColor="#982360"
                app:met_singleLineEllipsis="true"
                />
        <com.rengwuxian.materialedittext.MaterialEditText
                android:textColorHint="@color/black"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phoneField"
                android:hint="@string/phoneHint"
                android:inputType="phone"
                android:text=""
                android:textSize="20sp"
                app:met_floatingLabel="highlight"
                app:met_baseColor="#0056d3"
                app:met_primaryColor="#982360"
                app:met_singleLineEllipsis="true"
                />

    </LinearLayout>

</androidx.cardview.widget.CardView>